--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,22 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:recyclerview-v7:+"
-    compile "com.android.support:leanback-v17:+"
-    compile "com.android.support:appcompat-v7:+"
-
-    compile "com.android.support:preference-v7:+"
-    compile "com.android.support:preference-leanback-v17:+"
-    compile "com.android.support:preference-v14:+"
-
-    compile "com.google.code.gson:gson:1.7.2"
-    compile "com.android.support:palette-v7:+"
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:leanback-v17:+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:preference-v7:+'
+    compile 'com.android.support:preference-leanback-v17:+'
+    compile 'com.android.support:preference-v14:+'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'com.android.support:palette-v7:+'
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.libraries.tv:companionlibrary:0.1'
 }
